--- a/snapDish/www/partials/new_dish.html
+++ b/snapDish/www/partials/new_dish.html
@@ -24,7 +24,7 @@
 					<input type="text" ng-model="dish.name">
 				</label>
 			</li>
-			<li>
+			<li class="new-dish-photo">
 				<ion-item class="item-avatar" ng-show="dish.base64_string">
 					<img ng-src="{{dish.base64_string}}">
 					<h2>{{dish.name}}</h2>
