--- a/snapDish/www/partials/new_photo.html
+++ b/snapDish/www/partials/new_photo.html
@@ -9,12 +9,12 @@
 		</label>
 		<ion-list>
 			<ion-item class="item-avatar">
-				<img ng-src="{{dish.base64_string}}">
-				<h2>{{dish.name}}</h2>
+				<img ng-src="{{newPhoto}}">
+				<h2>{{newPhoto}}</h2>
 			</ion-item>
 		</ion-list>
 		<div class="item item-image">
-			<img ng-show="dish.base64_string !== undefined" ng-src="{{dish.base64_string}}">
+			<img ng-show="newPhoto !== undefined" ng-src="{{newPhoto}}">
 		</div>
 	</ion-content>
 
