fix new functionality for add new_photo.html

--- a/snapDish/www/partials/new_dish.html
+++ b/snapDish/www/partials/new_dish.html
@@ -29,6 +29,7 @@
 					<img ng-src="{{dish.base64_string}}">
 					<h2>{{dish.name}}</h2>
 				</ion-item>
+				<img ng-src="{{dish.base64_string}}">
 			</li>
 			<li>
 				<a ng-click="takePicture('camera')" class="button snap"></a>
