--- a/snapDish/www/partials/new_photo.html
+++ b/snapDish/www/partials/new_photo.html
@@ -1,8 +1,8 @@
 <ion-view title="New Dish Image">
 
 	<ion-content>
-		<a ng-click="takePicture('library')" class="button button-outline icon-right ion-images button-positive">Photo Library</a>
-		<a ng-click="takePicture('camera')" class="button button-outline icon-right ion-social-instagram-outline button-positive">Take Picture</a>
+<!-- 		<a ng-click="takePicture('library')" class="button button-outline icon-right ion-images button-positive">Photo Library</a>
+		<a ng-click="takePicture('camera')" class="button button-outline icon-right ion-social-instagram-outline button-positive">Take Picture</a> -->
 		<a ng-click="save('image')" class="button button-outline button-positive">Save</a>
 		<label class="item">
 			<span class="input-label">New Dish Image</span>
