--- a/snapDish/scss/ionic.app.scss
+++ b/snapDish/scss/ionic.app.scss
@@ -28,7 +28,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	}
 
 	.snap-ion-content {
-		background: #e7e8ed;
+		background: #ffffff;
 	}
 
 	.sort-by {
@@ -75,7 +75,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 	.nav-bar-block {
 		.bar-header {
-			background: rgb(255,51,102);
+			background: #f17476;
 		}
 	}
 
@@ -101,7 +101,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	}
 
 	.stars {
-		color: rgb(255,51,102);
+		color: #e06c6e;
 	}
 
 	.popup-container {
@@ -191,7 +191,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 		.dish-list {
 			.dish-item {
 				padding: 0;
-				margin: 5px;
+				//margin: 5px;
 				border-color: rgb(184, 187, 189);
 				background-color: white;
 
@@ -200,9 +200,13 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 				}
 
 				.dish-image {
-					width: 45%;
-					height: 45%;
-					margin: 5px;
+					background-position: center center;
+					background-repeat: no-repeat;
+					background-size: cover;
+					display: inline-block;
+					width: 30.66%;
+					height: 100px;
+					margin: 1.3%;
 					border: 1px solid #b8bbbd;
 
 					&:first-of-type {
@@ -271,8 +275,8 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 				position: absolute;
 				top: 40px;
 				left: 50%;
-				margin-left: -137px;
-				font-size: 50px;
+				margin-left: -98px;
+  				font-size: 36px;
 				z-index: 999;
 			}
 
@@ -374,7 +378,6 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 	.restaurants-content {
 		.item-restaurant {
-			margin: 5px;
 			border: 1px solid #c6cbcf;
 
 			h2,
@@ -421,7 +424,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 				}
 
 				&:last-child {
-					background: #ff3366;
+					background: #f37577;
 				}
 			}
 
