--- a/snapDish/www/partials/login.html
+++ b/snapDish/www/partials/login.html
@@ -1,6 +1,6 @@
 <div class="login">
 	<div class="logo">
-		<img src="images/logo.png" />
+		<img src="images/login_logo.png" />
 	</div>
 	<div id="fb-root"></div>
 	<div class="facebook-btn" ng-click="login()">
