--- a/snapDish/www/partials/restaurants.html
+++ b/snapDish/www/partials/restaurants.html
@@ -1,13 +1,13 @@
 <ion-view title="Restaurants">
 	<ion-content class="snap-ion-content restaurants-content">
 
-		<button ng-click="getUser()">get user</button>
+		<!-- <button ng-click="getUser()">get user</button> -->
 
 		<label class="item item-input">
 			<i class="icon ion-search placeholder-icon"></i>
 			<input type="text" placeholder="Search" ng-model="query" ng-change="setList(query)">
 		</label>
-		<div class="sort-by">sort by | name</div>
+		<!-- <div class="sort-by">sort by | name</div> -->
 		<ion-list >
 			<ion-item class="item-avatar item-restaurant" ng-repeat="restaurant in restaurants | filter: search" ui-sref="restaurant({restaurantId: restaurant.ID})">
 			<img ng-src="{{restaurant.LOGO}}">
